--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        " 'weather_app']"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "[]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,16 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "soup = BeautifulSoup(response.text, 'html.parser')"
+    "# soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "soup = BeautifulSoup(response.text, 'lxml')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -119,11 +120,10 @@
       "  <link crossorigin=\"anonymous\" href=\"https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css\" integrity=\"sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1\" rel=\"stylesheet\"/>\n",
       "  <link href=\"css/font.css\" rel=\"stylesheet\" type=\"text/css\"/>\n",
       "  <link href=\"css/app.css\" rel=\"stylesheet\" type=\"text/css\"/>\n",
-      "  <link crossorigin=\"anonymous\" href=\"https://pro.fontawesome.com/releases/v5.10.0/css/all.css\" integrity=\"sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p\" rel=\"stylesheet\">\n",
-      "   <title>\n",
-      "    News - Mars Exploration Program\n",
-      "   </title>\n",
-      "  </link>\n",
+      "  <link crossorigin=\"anonymous\" href=\"https://pro.fontawesome.com/releases/v5.10.0/css/all.css\" integrity=\"sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p\" rel=\"stylesheet\"/>\n",
+      "  <title>\n",
+      "   News - Mars Exploration Program\n",
+      "  </title>\n",
       " </head>\n",
       " <body>\n",
       "  <div class=\"col-md-12\">\n",
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -458,35 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NASA to Broadcast Mars 2020 Perseverance Launch, Prelaunch Activities\n",
-      "The Launch Is Approaching for NASA's Next Mars Rover, Perseverance\n",
-      "NASA to Hold Mars 2020 Perseverance Rover Launch Briefing\n",
-      "With supporting text below as a natural lead-in to additional content.\n",
-      "With supporting text below as a natural lead-in to additional content.\n",
-      "With supporting text below as a natural lead-in to additional content.\n",
-      "With supporting text below as a natural lead-in to additional content.\n",
-      "With supporting text below as a natural lead-in to additional content.\n",
-      "With supporting text below as a natural lead-in to additional content.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Print all paragraph texts\n",
-    "paragraphs = soup.find_all('p')\n",
-    "for paragraph in paragraphs:\n",
-    "    print(paragraph.text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +470,9 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 83.0.4103\n",
       "Get LATEST driver version for 83.0.4103\n",
-      "Driver [/Users/jennamurphy/.wdm/drivers/chromedriver/mac64/83.0.4103.39/chromedriver] found in cache\n"
+      "Get LATEST driver version for 83.0.4103\n",
+      "Trying to download new driver from https://chromedriver.storage.googleapis.com/83.0.4103.39/chromedriver_mac64.zip\n",
+      "Driver has been saved in cache [/Users/jennamurphy/.wdm/drivers/chromedriver/mac64/83.0.4103.39]\n"
      ]
     }
    ],
@@ -510,7 +484,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_red_planet = 'https://redplanetscience.com/'\n",
+    "browser.visit(url_red_planet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NASA's Curiosity Mars Rover Takes a New Selfie Before Record Climb\n",
+      "NASA's Perseverance Rover Mission Getting in Shape for Launch\n",
+      "NASA's Perseverance Rover Will Carry First Spacesuit Materials to Mars\n",
+      "The MarCO Mission Comes to an End\n",
+      "NASA Invites Students to Name Mars 2020 Rover\n",
+      "Robotic Toolkit Added to NASA's Mars 2020 Rover\n",
+      "A New Video Captures the Science of NASA's Perseverance Mars Rover\n",
+      "MAVEN Maps Electric Currents around Mars that are Fundamental to Atmospheric Loss\n",
+      "My Culture, My Voice\n",
+      "Global Storms on Mars Launch Dust Towers Into the Sky\n",
+      "With Mars Methane Mystery Unsolved, Curiosity Serves Scientists a New One: Oxygen\n",
+      "NASA's New Mars Rover Is Ready for Space Lasers\n",
+      "Mars 2020 Unwrapped and Ready for More Testing\n",
+      "NASA Engineers Checking InSight's Weather Sensors\n",
+      "NASA Updates Mars 2020 Mission Environmental Review\n"
+     ]
+    }
+   ],
+   "source": [
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "titles = soup.find_all('div', class_='content_title')\n",
+    "\n",
+    "for title in titles:\n",
+    "    print(title.text)\n",
+    "# categories = sidebar.find_all('li')\n",
+    "\n",
+    "# category_list = []\n",
+    "# url_list = []\n",
+    "# book_url_list = []\n",
+    "# for category in categories:\n",
+    "#     title = category.text.strip()\n",
+    "#     category_list.append(title)\n",
+    "#     book_url = category.find('a')['href']\n",
+    "#     url_list.append(book_url)\n",
+    "\n",
+    "# book_url_list = ['http://books.toscrape.com/' + url for url in url_list]\n",
+    "\n",
+    "# titles_and_urls = zip(category_list, book_url_list)\n",
+    "\n",
+    "# try:\n",
+    "#     for title_url in titles_and_urls:\n",
+    "#         browser.links.find_by_partial_text('next').click()\n",
+    "# except ElementDoesNotExist:\n",
+    "#     print(\"Scraping Complete\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Along with capturing an image before its steepest ascent ever, the robotic explorer filmed its \"selfie stick,\" or robotic arm, in action.\n",
+      "Stacking spacecraft components on top of each other is one of the final assembly steps before a mission launches to the Red Planet. \n",
+      "In a Q&A, spacesuit designer Amy Ross explains how five samples, including a piece of helmet visor, will be tested aboard the rover, which is targeting a July 30 launch. \n",
+      "The pair of briefcase-sized satellites made history when they sailed past Mars in 2019.\n",
+      "Through Nov. 1, K-12 students in the U.S. are encouraged to enter an essay contest to name NASA's next Mars rover.\n",
+      "The bit carousel, which lies at the heart of the rover's Sample Caching System, is now aboard NASA's newest rover. \n",
+      "With a targeted launch date of July 30, the next robotic scientist NASA is sending to the to the Red Planet has big ambitions.\n",
+      "Five years after NASA’s MAVEN spacecraft entered into orbit around Mars, data from the mission has led to the creation of a map of electric current systems in the Martian atmosphere.\n",
+      "In honor of Hispanic Heritage Month, Christina Hernandez, an instrument engineer on the Mars 2020 mission, talks about her childhood and journey to NASA.\n",
+      "A Mars Dust Tower Stands Out Dust storms are common on Mars. But every decade or so, something unpredictable happens: a series of runaway storms break out, covering the entire planet in a dusty haze.\n",
+      "For the first time in the history of space exploration, scientists have measured the seasonal changes in the gases that fill the air directly above the surface of Gale Crater on Mars. \n",
+      "Perseverance is one of a few Mars spacecraft carrying laser retroreflectors. The devices could provide new science and safer Mars landings in the future.\n",
+      "In time-lapse video, bunny-suited engineers remove the inner layer of protective foil on NASA's Mars 2020 rover after it was relocated for testing.\n",
+      "An electronics issue is suspected to be preventing the sensors from sharing their data about Mars weather with the spacecraft.\n",
+      "NASA and the Department of Energy have completed a more detailed risk analysis for the Mars 2020 rover launch from Florida.\n"
+     ]
+    }
+   ],
+   "source": [
+    "article_teaser = soup.find_all('div', class_='article_teaser_body')\n",
+    "\n",
+    "for article in article_teaser:\n",
+    "    print(article.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,29 +615,249 @@
     "# Retrieve all elements that contain book information\n",
     "featured_image = soup.find_all('img', class_='headerimage fade-in')\n",
     "\n",
-    "\n",
+    "featured_image_src = \"\";\n",
     "# Make sure to save a complete url string for this image.\n",
-    "\n",
+    "for image in featured_image:\n",
+    "    featured_image_src = image['src']\n",
     "\n",
     "# # Example:\n",
-    "# featured_image_url = 'https://spaceimages-mars.com/image/featured/mars2.jpg'"
+    "# featured_image_url = featured_image['src'].text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<img class=\"headerimage fade-in\" src=\"image/featured/mars2.jpg\"/>]\n"
+      "image/featured/mars1.jpg\n"
      ]
     }
    ],
    "source": [
-    "print(featured_image)"
+    "print(featured_image_src)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "featured_image_url = 'https://spaceimages-mars.com/' + featured_image_src"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://spaceimages-mars.com/image/featured/mars1.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(featured_image_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_facts = 'https://galaxyfacts-mars.com/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[                         0                1                2\n",
+       " 0  Mars - Earth Comparison             Mars            Earth\n",
+       " 1                Diameter:         6,779 km        12,742 km\n",
+       " 2                    Mass:  6.39 × 10^23 kg  5.97 × 10^24 kg\n",
+       " 3                   Moons:                2                1\n",
+       " 4       Distance from Sun:   227,943,824 km   149,598,262 km\n",
+       " 5          Length of Year:   687 Earth days      365.24 days\n",
+       " 6             Temperature:     -87 to -5 °C      -88 to 58°C,\n",
+       "                       0                              1\n",
+       " 0  Equatorial Diameter:                       6,792 km\n",
+       " 1       Polar Diameter:                       6,752 km\n",
+       " 2                 Mass:  6.39 × 10^23 kg (0.11 Earths)\n",
+       " 3                Moons:          2 ( Phobos & Deimos )\n",
+       " 4       Orbit Distance:       227,943,824 km (1.38 AU)\n",
+       " 5         Orbit Period:           687 days (1.9 years)\n",
+       " 6  Surface Temperature:                   -87 to -5 °C\n",
+       " 7         First Record:              2nd millennium BC\n",
+       " 8          Recorded By:           Egyptian astronomers]"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tables = pd.read_html(url_facts)\n",
+    "tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mars - Earth Comparison</td>\n",
+       "      <td>Mars</td>\n",
+       "      <td>Earth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Diameter:</td>\n",
+       "      <td>6,779 km</td>\n",
+       "      <td>12,742 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mass:</td>\n",
+       "      <td>6.39 × 10^23 kg</td>\n",
+       "      <td>5.97 × 10^24 kg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Moons:</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Distance from Sun:</td>\n",
+       "      <td>227,943,824 km</td>\n",
+       "      <td>149,598,262 km</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         0                1                2\n",
+       "0  Mars - Earth Comparison             Mars            Earth\n",
+       "1                Diameter:         6,779 km        12,742 km\n",
+       "2                    Mass:  6.39 × 10^23 kg  5.97 × 10^24 kg\n",
+       "3                   Moons:                2                1\n",
+       "4       Distance from Sun:   227,943,824 km   149,598,262 km"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_mars_facts = tables[0]\n",
+    "df_mars_facts.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>0</th>\\n      <th>1</th>\\n      <th>2</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Mars - Earth Comparison</td>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Diameter:</td>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Moons:</td>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Distance from Sun:</td>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Length of Year:</td>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>6</th>\\n      <td>Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "html_table = df_mars_facts.to_html()\n",
+    "html_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<table border=\"1\" class=\"dataframe\">  <thead>    <tr style=\"text-align: right;\">      <th></th>      <th>0</th>      <th>1</th>      <th>2</th>    </tr>  </thead>  <tbody>    <tr>      <th>0</th>      <td>Mars - Earth Comparison</td>      <td>Mars</td>      <td>Earth</td>    </tr>    <tr>      <th>1</th>      <td>Diameter:</td>      <td>6,779 km</td>      <td>12,742 km</td>    </tr>    <tr>      <th>2</th>      <td>Mass:</td>      <td>6.39 × 10^23 kg</td>      <td>5.97 × 10^24 kg</td>    </tr>    <tr>      <th>3</th>      <td>Moons:</td>      <td>2</td>      <td>1</td>    </tr>    <tr>      <th>4</th>      <td>Distance from Sun:</td>      <td>227,943,824 km</td>      <td>149,598,262 km</td>    </tr>    <tr>      <th>5</th>      <td>Length of Year:</td>      <td>687 Earth days</td>      <td>365.24 days</td>    </tr>    <tr>      <th>6</th>      <td>Temperature:</td>      <td>-87 to -5 °C</td>      <td>-88 to 58°C</td>    </tr>  </tbody></table>'"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "html_table.replace('\\n', '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_html('table.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OSX Users can run this to open the file in a browser, \n",
+    "# or you can manually find the file and open it in the browser\n",
+    "!open table.html"
    ]
   },
   {
