image src url list

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -862,6 +862,203 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_mars_hem = 'https://marshemispheres.com/'\n",
+    "browser.visit(url_mars_hem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "html = browser.html\n",
+    "# Parse HTML with Beautiful Soup\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "# Retrieve all elements that contain book information\n",
+    "featured_link = soup.find_all('a', class_='itemLink product-item')\n",
+    "\n",
+    "# featured_link['href']\n",
+    "\n",
+    "# # paragraphs = soup.find_all('p')\n",
+    "# for link in paragraphs:\n",
+    "#     print(paragraph.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<a class=\"itemLink product-item\" href=\"cerberus.html\"><img alt=\"Cerberus Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png\"/></a>, <a class=\"itemLink product-item\" href=\"cerberus.html\">\n",
+      "<h3>Cerberus Hemisphere Enhanced</h3>\n",
+      "</a>, <a class=\"itemLink product-item\" href=\"schiaparelli.html\"><img alt=\"Schiaparelli Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/08eac6e22c07fb1fe72223a79252de20_schiaparelli_enhanced.tif_thumb.png\"/></a>, <a class=\"itemLink product-item\" href=\"schiaparelli.html\">\n",
+      "<h3>Schiaparelli Hemisphere Enhanced</h3>\n",
+      "</a>, <a class=\"itemLink product-item\" href=\"syrtis.html\"><img alt=\"Syrtis Major Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/55a0a1e2796313fdeafb17c35925e8ac_syrtis_major_enhanced.tif_thumb.png\"/></a>, <a class=\"itemLink product-item\" href=\"syrtis.html\">\n",
+      "<h3>Syrtis Major Hemisphere Enhanced</h3>\n",
+      "</a>, <a class=\"itemLink product-item\" href=\"valles.html\"><img alt=\"Valles Marineris Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"images/4e59980c1c57f89c680c0e1ccabbeff1_valles_marineris_enhanced.tif_thumb.png\"/></a>, <a class=\"itemLink product-item\" href=\"valles.html\">\n",
+      "<h3>Valles Marineris Hemisphere Enhanced</h3>\n",
+      "</a>, <a class=\"itemLink product-item\" href=\"#\" onclick=\"showMain()\">\n",
+      "<h3>Back</h3>\n",
+      "</a>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(featured_link)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "href_link = []\n",
+    "href_list = []\n",
+    "link_click_href = []\n",
+    "for link in featured_link:\n",
+    "#     if link not in link_click_href:\n",
+    "    href_link = link['href']\n",
+    "    link_click_href.append(href_link)\n",
+    "    for i in link_click_href:\n",
+    "        if i not in href_list and i != '#':\n",
+    "            href_list.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['cerberus.html', 'schiaparelli.html', 'syrtis.html', 'valles.html']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(href_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hem_url_list = ['https://marshemispheres.com/' + url for url in href_list]\n",
+    "\n",
+    "# titles_and_urls = zip(category_list, book_url_list)\n",
+    "\n",
+    "# try:\n",
+    "#     for url in hem_url_list:\n",
+    "#         browser.links.find_by_partial_text('next').click()\n",
+    "# except ElementDoesNotExist:\n",
+    "#     print(\"Scraping Complete\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['https://marshemispheres.com/cerberus.html', 'https://marshemispheres.com/schiaparelli.html', 'https://marshemispheres.com/syrtis.html', 'https://marshemispheres.com/valles.html']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hem_url_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_url_link = []\n",
+    "url_new = \"\"\n",
+    "for link in hem_url_list:\n",
+    "    url_new = link\n",
+    "    browser.visit(url_new)\n",
+    "    html = browser.html\n",
+    "    # Parse HTML with Beautiful Soup\n",
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
+    "    # Retrieve all elements that contain book information\n",
+    "    featured_link_test = soup.find_all('a')\n",
+    "    for link in featured_link_test:\n",
+    "#     if link not in link_click_href:\n",
+    "        if link.text == 'Sample':\n",
+    "            img_url_link.append(link['href'])\n",
+    "#         href_link = link['href']\n",
+    "#         link_click_href.append(href_link)\n",
+    "#         for i in link_click_href:\n",
+    "#             if i not in href_list and i != '#':\n",
+    "#                 href_list.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['images/full.jpg', 'images/schiaparelli_enhanced-full.jpg', 'images/syrtis_major_enhanced-full.jpg', 'images/valles_marineris_enhanced-full.jpg']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(img_url_link)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hem_img_url_list = ['https://marshemispheres.com/' + url for url in img_url_link]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['https://marshemispheres.com/images/full.jpg', 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg', 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg', 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hem_img_url_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
