created dictionary, appending title and img_url, but getting duplicates still

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -920,12 +920,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
     "href_link = []\n",
     "href_list = []\n",
+    "title = []\n",
+    "title_list = []\n",
     "link_click_href = []\n",
     "for link in featured_link:\n",
     "#     if link not in link_click_href:\n",
@@ -933,12 +935,14 @@
     "    link_click_href.append(href_link)\n",
     "    for i in link_click_href:\n",
     "        if i not in href_list and i != '#':\n",
-    "            href_list.append(i)"
+    "            href_list.append(i)\n",
+    "\n",
+    "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -950,12 +954,12 @@
     }
    ],
    "source": [
-    "print(href_list)"
+    "print(href_list)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -989,12 +993,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
     "img_url_link = []\n",
     "url_new = \"\"\n",
+    "title_list = []\n",
+    "new={}\n",
+    "content = []\n",
+    "\n",
     "for link in hem_url_list:\n",
     "    url_new = link\n",
     "    browser.visit(url_new)\n",
@@ -1002,59 +1010,40 @@
     "    # Parse HTML with Beautiful Soup\n",
     "    soup = BeautifulSoup(html, 'html.parser')\n",
     "    # Retrieve all elements that contain book information\n",
+    "    featured_title = soup.find_all('h2', class_=\"title\")\n",
+    "\n",
     "    featured_link_test = soup.find_all('a')\n",
+    "    \n",
+    "\n",
+    "    for title in featured_title:\n",
+    "        if title not in new.values():\n",
+    "#             title_list.append(title.text)\n",
+    "            new['title'] = title.text\n",
+    "            content.append(new)\n",
+    "\n",
     "    for link in featured_link_test:\n",
-    "#     if link not in link_click_href:\n",
-    "        if link.text == 'Sample':\n",
-    "            img_url_link.append(link['href'])\n",
-    "#         href_link = link['href']\n",
-    "#         link_click_href.append(href_link)\n",
-    "#         for i in link_click_href:\n",
-    "#             if i not in href_list and i != '#':\n",
-    "#                 href_list.append(i)"
+    "        if link not in new.values():\n",
+    "            if link.text == 'Sample':\n",
+    "#                 img_url_link.append(link['href'])\n",
+    "                new['img_url'] = 'https://marshemispheres.com/' + link['href']\n",
+    "                content.append(new)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['images/full.jpg', 'images/schiaparelli_enhanced-full.jpg', 'images/syrtis_major_enhanced-full.jpg', 'images/valles_marineris_enhanced-full.jpg']\n"
+      "[{'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg'}]\n"
      ]
     }
    ],
    "source": [
-    "print(img_url_link)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 253,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hem_img_url_list = ['https://marshemispheres.com/' + url for url in img_url_link]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 255,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['https://marshemispheres.com/images/full.jpg', 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg', 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg', 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(hem_img_url_list)"
+    "print(content)"
    ]
   },
   {
