got img url and titles into dictonary object

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -1102,6 +1102,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'title': 'Cerberus Hemisphere Enhanced', 'img_url': 'https://marshemispheres.com/images/full.jpg'}, {'title': 'Schiaparelli Hemisphere Enhanced', 'img_url': 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg'}, {'title': 'Syrtis Major Hemisphere Enhanced', 'img_url': 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dicts = {}\n",
+    "hemisphere_image_urls = []\n",
+    "# keys = range(4)\n",
+    "# for i in keys:\n",
+    "for x, j in zip(title_list, img_url_link):\n",
+    "        dict = {\"title\" : x, \"img_url\": j}\n",
+    "        hemisphere_image_urls.append(dict)\n",
+    "\n",
+    "print(hemisphere_image_urls)     "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
